chore: force tinybird ci run on adding labels to prs

--- a/.github/workflows/tinybird-ci.yml
+++ b/.github/workflows/tinybird-ci.yml
@@ -2,6 +2,7 @@ name: Tinybird CI
 
 on:
   pull_request:
+    types: [labeled, unlabeled, synchronize]
     paths:
       - 'services/libs/tinybird/**'
   workflow_dispatch:
