--- a/services/apps/security_best_practices_worker/package.json
+++ b/services/apps/security_best_practices_worker/package.json
@@ -25,7 +25,8 @@
     "axios": "^1.6.8",
     "moment": "~2.29.4",
     "tsx": "^4.7.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
