--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "@nangohq/frontend": "^0.9.0",
     "@nangohq/frontend-v2": "npm:@nangohq/frontend@^0.52.4",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tanstack/vue-query": "^5.75.1",
+    "@tanstack/vue-query-devtools": "^5.75.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "@vuelidate/core": "^2.0.1",
