--- a/services/apps/cron_service/package.json
+++ b/services/apps/cron_service/package.json
@@ -21,10 +21,9 @@
     "@crowd/types": "workspace:*",
     "@crowd/queue": "workspace:*",
     "@crowd/telemetry": "workspace:*",
+    "@crowd/redis": "workspace:*",
     "cron": "^2.1.0",
     "cron-time-generator": "^1.3.0",
-    "oci-common": "^2.109.1",
-    "oci-streaming": "^2.109.1",
     "p-queue": "^8.1.0",
     "pidusage": "^3.0.2",
     "tsx": "^4.7.1",
