--- a/backend/package.json
+++ b/backend/package.json
@@ -69,6 +69,7 @@
     "@octokit/core": "^6.1.2",
     "@octokit/graphql": "^4.8.0",
     "@octokit/request": "^5.6.3",
+    "@octokit/rest": "^22.0.0",
     "@opensearch-project/opensearch": "^2.11.0",
     "@slack/web-api": "^6.7.2",
     "@superfaceai/one-sdk": "^1.3.0",
