chore(integrations): fixed nango monitoring job and added a job that triggers integration results if they are pending and possibly missing from the queue
Signed-off-by: Uroš Marolt <uros@marolt.me>

--- a/services/apps/cron_service/package.json
+++ b/services/apps/cron_service/package.json
@@ -19,6 +19,7 @@
     "@crowd/nango": "workspace:*",
     "@crowd/temporal": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@crowd/common_services": "workspace:*",
     "@crowd/queue": "workspace:*",
     "@crowd/telemetry": "workspace:*",
     "@crowd/redis": "workspace:*",
