--- a/services/libs/common_services/package.json
+++ b/services/libs/common_services/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.572.0",
     "@crowd/common": "workspace:*",
+    "@crowd/data-access-layer": "workspace:*",
     "@crowd/database": "workspace:*",
     "@crowd/logging": "workspace:*",
     "@crowd/queue": "workspace:*",
