--- a/services/apps/security_best_practices_worker/package.json
+++ b/services/apps/security_best_practices_worker/package.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "@crowd/archetype-standard": "workspace:*",
     "@crowd/archetype-worker": "workspace:*",
+    "@crowd/common": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/logging": "workspace:*",
-    "@crowd/common": "workspace:*",
     "@crowd/opensearch": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/types": "workspace:*",
-    "@temporalio/workflow": "~1.11.1",
-    "@temporalio/client": "~1.11.1",
+    "@temporalio/client": "~1.11.8",
+    "@temporalio/workflow": "~1.11.8",
     "axios": "^1.6.8",
+    "js-yaml": "^4.1.0",
     "moment": "~2.29.4",
     "tsx": "^4.7.1",
-    "typescript": "^5.6.3",
-    "js-yaml": "^4.1.0"
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
