fix(integrations): added metadata about member identity errors
Signed-off-by: Uroš Marolt <uros@marolt.me>

--- a/services/apps/data_sink_worker/package.json
+++ b/services/apps/data_sink_worker/package.json
@@ -20,7 +20,8 @@
     "script:map-member-to-org": "SERVICE=script tsx src/bin/map-member-to-org.ts",
     "script:fix-activity-obj-member-data": "SERVICE=script tsx src/bin/fix-activity-obj-member-data.ts",
     "script:fix-member-displayName": "SERVICE=script tsx src/bin/fix-member-displayName.ts",
-    "script:fix-members-joinedAt": "SERVICE=script tsx src/bin/fix-members-joinedAt.ts"
+    "script:fix-members-joinedAt": "SERVICE=script tsx src/bin/fix-members-joinedAt.ts",
+    "script:debug-process-results": "SERVICE=script tsx --inspect=0.0.0.0:9233 src/bin/debug-process-results.ts"
   },
   "dependencies": {
     "@crowd/common": "workspace:*",
