chore: redis key cache clear script

--- a/services/apps/data_sink_worker/package.json
+++ b/services/apps/data_sink_worker/package.json
@@ -20,7 +20,8 @@
     "script:map-member-to-org": "SERVICE=script tsx src/bin/map-member-to-org.ts",
     "script:fix-activity-obj-member-data": "SERVICE=script tsx src/bin/fix-activity-obj-member-data.ts",
     "script:fix-member-displayName": "SERVICE=script tsx src/bin/fix-member-displayName.ts",
-    "script:fix-members-joinedAt": "SERVICE=script tsx src/bin/fix-members-joinedAt.ts"
+    "script:fix-members-joinedAt": "SERVICE=script tsx src/bin/fix-members-joinedAt.ts",
+    "script:clear-redis-cache": "SERVICE=script tsx src/bin/clear-redis-cache.ts"
   },
   "dependencies": {
     "@crowd/common": "workspace:*",
