chore: uv migration

--- a/services/apps/git_integration/Makefile
+++ b/services/apps/git_integration/Makefile
@@ -12,41 +12,41 @@ COMPOSE_FILE = docker-compose -f ../../../scripts/services/git-integration.yaml
 
 # Check if local setup is complete
 check_setup:
-	@if ! command -v poetry >/dev/null 2>&1; then \
-		echo "❌ Poetry not found. Run 'make setup' first."; \
+	@if ! command -v uv >/dev/null 2>&1; then \
+		echo "❌ uv not found. Run 'make setup' first."; \
 		exit 1; \
 	fi
-	@if ! poetry run ruff --version >/dev/null 2>&1; then \
+	@if ! uv run ruff --version >/dev/null 2>&1; then \
 		echo "📦 Installing dev dependencies..."; \
-		poetry install --with dev --no-interaction; \
+		uv sync --extra dev; \
 	fi
 
 ##@ 🚀 Setup and installation
 
-setup: ## Install Poetry and dev dependencies (only if not already installed)
-	@echo "🔧 Checking if Poetry is installed..."
-	@if command -v poetry >/dev/null 2>&1; then \
-		echo "✅ Poetry is already installed at $$(which poetry)"; \
+setup: ## Install uv and dev dependencies (only if not already installed)
+	@echo "🔧 Checking if uv is installed..."
+	@if command -v uv >/dev/null 2>&1; then \
+		echo "✅ uv is already installed at $$(which uv)"; \
 		echo "📦 Installing dev dependencies..."; \
-		poetry install --with dev --no-interaction; \
+		uv sync --extra dev; \
 		echo "✅ Setup complete"; \
 	else \
-		echo "📦 Poetry is required to:"; \
+		echo "📦 uv is required to:"; \
 		echo "   - Add/remove packages to pyproject.toml"; \
 		echo "   - Manage dependency versions and conflicts"; \
-		echo "   - Generate poetry.lock for reproducible builds"; \
+		echo "   - Generate uv.lock for reproducible builds"; \
 		echo "   - Install dependencies locally for development"; \
 		echo ""; \
-		echo "Installing Poetry..."; \
-		curl -sSL https://install.python-poetry.org | python3 -; \
-		echo "Adding Poetry to PATH..."; \
-		echo 'export PATH="$$HOME/.local/bin:$$PATH"' >> ~/.zshrc; \
-		echo 'export PATH="$$HOME/.local/bin:$$PATH"' >> ~/.bash_profile; \
-		echo 'export PATH="$$HOME/.local/bin:$$PATH"' >> ~/.bashrc; \
-		export PATH="$$HOME/.local/bin:$$PATH"; \
+		echo "Installing uv..."; \
+		curl -LsSf https://astral.sh/uv/install.sh | sh; \
+		echo "Adding uv to PATH..."; \
+		echo 'export PATH="$$HOME/.cargo/bin:$$PATH"' >> ~/.zshrc; \
+		echo 'export PATH="$$HOME/.cargo/bin:$$PATH"' >> ~/.bash_profile; \
+		echo 'export PATH="$$HOME/.cargo/bin:$$PATH"' >> ~/.bashrc; \
+		export PATH="$$HOME/.cargo/bin:$$PATH"; \
 		echo "📦 Installing dev dependencies..."; \
-		poetry install --with dev --no-interaction; \
-		echo "✅ Poetry installed and dev dependencies ready"; \
+		uv sync --extra dev; \
+		echo "✅ uv installed and dev dependencies ready"; \
 		echo "📝 Next steps:"; \
 		echo "   - Restart your terminal or run: source ~/.zshrc"; \
 		echo "   - Use: make add_package name=<package> to add dependencies"; \
@@ -61,10 +61,10 @@ cmd: ## Run any command inside the container, example: make cmd -- ls -la
 	$(COMPOSE_FILE) run --rm --no-deps git-integration-dev $(CMD_ARGS)
 
 lint: check_setup ## Check code with ruff
-	@poetry run ruff check src/
+	@uv run ruff check src/
 
 format: check_setup ## Format code with ruff
-	@poetry run ruff format src/
+	@uv run ruff format src/
 
 rebuild: ## Rebuild the container
 	$(COMPOSE_FILE) build git-integration-dev
@@ -74,26 +74,26 @@ rebuild: ## Rebuild the container
 
 add_package: check_setup ## Add new package to pyproject.toml, example: make add_package name=requests
 	@echo "Adding $(name) to dependencies..."
-	@poetry add $(name)
+	@uv add $(name)
 	@echo "Rebuilding container..."
 	$(COMPOSE_FILE) build git-integration-dev
 	@echo "✅ Package $(name) added and container rebuilt"
 
 remove_package: check_setup ## Remove package from pyproject.toml, example: make remove_package name=requests
 	@echo "Removing $(name) from dependencies..."
-	@poetry remove $(name)
+	@uv remove $(name)
 	@echo "Rebuilding container..."
 	$(COMPOSE_FILE) build git-integration-dev
 	@echo "✅ Package $(name) removed and container rebuilt"
 
 update_deps: check_setup ## Update all dependencies
 	@echo "Updating dependencies..."
-	@poetry update
+	@uv lock
 	@echo "Rebuilding container..."
 	$(COMPOSE_FILE) build git-integration-dev
 	@echo "✅ Dependencies updated and container rebuilt"
 
-lock_deps: check_setup ## Generate/update poetry.lock file
-	@echo "Generating poetry.lock file..."
-	@poetry lock
-	@echo "✅ poetry.lock updated"
+lock_deps: check_setup ## Generate/update uv.lock file
+	@echo "Generating uv.lock file..."
+	@uv lock
+	@echo "✅ uv.lock updated"
