chore: update dockerfile to support uv

--- a/scripts/services/docker/Dockerfile.git_integration
+++ b/scripts/services/docker/Dockerfile.git_integration
@@ -3,28 +3,29 @@ FROM python:3.13.5-slim-bullseye AS builder
 # Install build dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    curl \
-    git \
     --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
-ENV POETRY_VERSION=2.1.3
-ENV POETRY_HOME=/opt/poetry
-ENV POETRY_NO_INTERACTION=1
-ENV POETRY_VENV_IN_PROJECT=1
-ENV POETRY_CACHE_DIR=/tmp/poetry_cache
-
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=${POETRY_HOME} python3 - --version ${POETRY_VERSION} && \
-    cd /usr/local/bin && \
-    ln -s ${POETRY_HOME}/bin/poetry && \
-    poetry config virtualenvs.create false
+# Install uv from official image
+COPY --from=ghcr.io/astral-sh/uv:0.7.17 /uv /usr/local/bin/uv
 
 WORKDIR /usr/crowd/app
 
-COPY ./services/apps/git_integration/poetry.lock ./services/apps/git_integration/pyproject.toml ./
-RUN poetry install --no-root
+ENV UV_LINK_MODE=copy \
+    UV_COMPILE_BYTECODE=1 \
+    UV_PYTHON_DOWNLOADS=never \
+    UV_PYTHON=python3.13 \
+    UV_PROJECT_ENVIRONMENT=/usr/crowd/app/.venv \
+    UV_VENV_PATH=/usr/crowd/app/.venv
+
+# Copy only necessary files for dependency resolution (for better caching)
+COPY ./services/apps/git_integration/pyproject.toml ./services/apps/git_integration/uv.lock ./services/apps/git_integration/README.md ./
+COPY ./LICENSE ./
+
+# Install dependencies system-wide using uv sync and then copy to system Python
+RUN uv sync --frozen --no-dev
+
+# Copy source code
 COPY ./services/apps/git_integration ./
 
 
@@ -36,7 +37,8 @@ RUN apt-get update && apt-get install -y \
     git \
     --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    && apt-get clean \
+    && apt-get autoremove -y
 
 # Set Python environment variables
 ENV PYTHONUNBUFFERED=1
@@ -45,12 +47,14 @@ ENV PIP_NO_CACHE_DIR=off
 
 WORKDIR /usr/crowd/app
 
-# Copy Python packages from builder - copy the entire Python installation
-COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
+# Copy the virtual environment from builder stage
+COPY --from=builder /usr/crowd/app/.venv /usr/crowd/app/.venv
 
-# Copy the git_integration service from builder
+# Copy the git_integration service from builder stage
 COPY --from=builder /usr/crowd/app/ ./
+
+# Activate virtual environment by adding it to PATH
+ENV PATH="/usr/crowd/app/.venv/bin:$PATH"
 
 # Make runner script executable
 RUN chmod +x ./src/runner.sh
