--- a/services/libs/common/package.json
+++ b/services/libs/common/package.json
@@ -13,7 +13,17 @@
   },
   "dependencies": {
     "@crowd/types": "workspace:*",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "~4.4.2",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
+    "lodash.pick": "~4.4.0",
+    "lodash.set": "^4.3.2",
+    "lodash.sum": "^4.0.2",
+    "lodash.unionwith": "^4.6.0",
     "moment-timezone": "^0.5.34",
     "tldts": "^6.1.11",
     "uuid": "^9.0.0"
