feat: queue env var

--- a/backend/.env.dist.composed
+++ b/backend/.env.dist.composed
@@ -1,5 +1,6 @@
 # Kafka settings
 CROWD_KAFKA_BROKERS=kafka:9092
+CROWD_KAFKA_TOPIC=data-sink-worker-normal
 
 # Redis settings
 CROWD_REDIS_HOST=redis
