--- a/services/apps/git_integration/pyproject.toml
+++ b/services/apps/git_integration/pyproject.toml
@@ -24,13 +24,13 @@ dependencies = [
     "fastapi[standard]",
     "uvicorn",
     "asyncio",
-    "confluent-kafka",
     "openai>=1.45.0",
     "prettytable>=3.11.0",
     "python-slugify>=8.0.4",
     "asyncpg",
     "loguru>=0.7.3",
     "tenacity>=9.1.2",
+    "aiokafka>=0.12.0",
 ]
 
 [project.optional-dependencies]
