feat: add the archived repositories checker
Signed-off-by: Raúl Santos <4837+borfast@users.noreply.github.com>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - 'services/libs/*'
   - 'services/archetypes/*'
   - 'services/apps/*'
+  - '!services/cronjobs'
   - 'services'
   - 'backend'
   - '.github/actions/node'
