chore: remove fake password from docker-compose.yaml to satisfy GitGuardian
Signed-off-by: Raúl Santos <4837+borfast@users.noreply.github.com>

--- a/services/cronjobs/archived_repositories/docker-compose.yaml
+++ b/services/cronjobs/archived_repositories/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_DB: ${CROWD_DB_DATABASE:-crowd}
       POSTGRES_USER: ${CROWD_DB_USERNAME:-postgres}
-      POSTGRES_PASSWORD: ${CROWD_DB_PASSWORD:-postgres}
+      POSTGRES_PASSWORD: ${CROWD_DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
