fix: skip eslint on jest config

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,33 +3,20 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": [
-      "es2018",
-      "dom",
-      "ES2021.String"
-    ],
+    "lib": ["es2018", "dom", "ES2021.String"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "sourceMap": true,
     "target": "es2018",
-    "types": [
-      "node",
-      "jest"
-    ],
+    "types": ["node", "jest"],
     "baseUrl": "./src",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "skipLibCheck": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
