--- a/services/libs/common/package.json
+++ b/services/libs/common/package.json
@@ -26,6 +26,7 @@
     "lodash.unionwith": "^4.6.0",
     "moment-timezone": "^0.5.34",
     "tldts": "^6.1.11",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.7.0"
   }
 }
