--- a/services/cronjobs/archived_repositories/.env.example
+++ b/services/cronjobs/archived_repositories/.env.example
@@ -1,10 +1,3 @@
-# Database Configuration
-INSIGHTS_DB_HOST=localhost
-INSIGHTS_DB_PORT=5432
-INSIGHTS_DB_USERNAME=your_db_username
-INSIGHTS_DB_PASSWORD=your_db_password
-INSIGHTS_DB_DATABASE=insights
-
 GITHUB_TOKEN=your_github_token_here
 GITHUB_BATCH_SIZE=5000
 GITHUB_DELAY_MS=500000
@@ -13,12 +6,36 @@ GITLAB_TOKEN=your_gitlab_token_here
 GITLAB_BATCH_SIZE=100
 GITLAB_DELAY_MS=500000
 
-CROWD_REDIS_USERNAME=default
-CROWD_REDIS_PASSWORD=
-CROWD_REDIS_HOST=
-CROWD_REDIS_PORT=6379
-
 # How many repositories to fetch from the main database and enqueue in each batch
 BATCH_SIZE=500
 # How long to wait between batches in milliseconds
 BATCH_DELAY_MS=500000
+
+# The number of the Redis database to use - THIS IS IMPORTANT FOR PRODUCTION!
+# By default, when no database number is specified, Redis uses 0, but 0 is already in use by the main backend.
+# This means that if you don't override this, you may accidentally overwrite the main backend's Redis data.
+# It is set to 1 here just to be safe, in case somehow this example ends up in production and you forget to set it.
+REDIS_DB=1
+
+
+#########################
+## START GLOBAL CONFIG ##
+# These don't need to be set for production, as they come from the global backend ConfigMap.
+
+# PostgreSQL connection details
+CROWD_DB_WRITE_HOST=
+CROWD_DB_READ_HOST=
+CROWD_DB_PORT=
+CROWD_DB_USERNAME=
+CROWD_DB_PASSWORD=
+CROWD_DB_DATABASE=
+
+# Redis connection details
+CROWD_REDIS_USERNAME=
+CROWD_REDIS_PASSWORD=
+CROWD_REDIS_HOST=
+CROWD_REDIS_PORT=
+
+## END GLOBAL CONFIG ##
+#######################
+
