chore: don't reference separate configmaps
Signed-off-by: Raúl Santos <4837+borfast@users.noreply.github.com>

--- a/services/cronjobs/archived_repositories/.env.example
+++ b/services/cronjobs/archived_repositories/.env.example
@@ -1,26 +1,16 @@
-GITHUB_TOKEN=your_github_token_here
-GITHUB_BATCH_SIZE=5000
-GITHUB_DELAY_MS=500000
+ARCHIVED_REPOSITORIES_CHECKER_GITHUB_TOKEN=
+#ARCHIVED_REPOSITORIES_CHECKER_GITHUB_BATCH_SIZE=5000
+#ARCHIVED_REPOSITORIES_CHECKER_GITHUB_DELAY_MS=500000
 
-GITLAB_TOKEN=your_gitlab_token_here
-GITLAB_BATCH_SIZE=100
-GITLAB_DELAY_MS=500000
+ARCHIVED_REPOSITORIES_CHECKER_GITLAB_TOKEN=
+#ARCHIVED_REPOSITORIES_CHECKER_GITLAB_BATCH_SIZE=100
+#ARCHIVED_REPOSITORIES_CHECKER_GITLAB_DELAY_MS=500000
 
 # How many repositories to fetch from the main database and enqueue in each batch
-BATCH_SIZE=500
+ARCHIVED_REPOSITORIES_CHECKER_BATCH_SIZE=500
 # How long to wait between batches in milliseconds
-BATCH_DELAY_MS=500000
+ARCHIVED_REPOSITORIES_CHECKER_BATCH_DELAY_MS=500000
 
-# The number of the Redis database to use - THIS IS IMPORTANT FOR PRODUCTION!
-# By default, when no database number is specified, Redis uses 0, but 0 is already in use by the main backend.
-# This means that if you don't override this, you may accidentally overwrite the main backend's Redis data.
-# It is set to 1 here just to be safe, in case somehow this example ends up in production and you forget to set it.
-REDIS_DB=1
-
-
-#########################
-## START GLOBAL CONFIG ##
-# These don't need to be set for production, as they come from the global backend ConfigMap.
 
 # PostgreSQL connection details
 CROWD_DB_WRITE_HOST=
@@ -35,7 +25,8 @@ CROWD_REDIS_USERNAME=
 CROWD_REDIS_PASSWORD=
 CROWD_REDIS_HOST=
 CROWD_REDIS_PORT=
-
-## END GLOBAL CONFIG ##
-#######################
-
+# The number of the Redis database to use - THIS IS IMPORTANT FOR PRODUCTION!
+# By default, when no database number is specified, Redis uses 0, but 0 is already in use by the main backend.
+# This means that if you don't override this, you may accidentally overwrite the main backend's Redis data.
+# It is set to 1 here just to be safe, in case somehow this example ends up in production and you forget to set it.
+ARCHIVED_REPOSITORIES_CHECKER_REDIS_DB=1
