--- a/services/apps/git_integration/pyproject.toml
+++ b/services/apps/git_integration/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "loguru>=0.7.3",
     "tenacity>=9.1.2",
     "aiokafka>=0.12.0",
+    "aiofiles>=24.1.0",
+    "aioboto3>=15.1.0",
 ]
 
 [project.optional-dependencies]
