feat: store maintainers and update githubRepos in db

--- a/services/apps/git_integration/pyproject.toml
+++ b/services/apps/git_integration/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "aiokafka>=0.12.0",
     "aiofiles>=24.1.0",
     "aioboto3>=15.1.0",
+    "slugify>=0.0.1",
 ]
 
 [project.optional-dependencies]
