--- a/services/apps/profiles_worker/package.json
+++ b/services/apps/profiles_worker/package.json
@@ -20,6 +20,7 @@
     "@crowd/types": "workspace:*",
     "@temporalio/client": "~1.11.8",
     "@temporalio/workflow": "~1.11.8",
+    "axios": "^1.6.8",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
   },
