--- a/services/apps/profiles_worker/package.json
+++ b/services/apps/profiles_worker/package.json
@@ -15,6 +15,7 @@
     "@crowd/archetype-standard": "workspace:*",
     "@crowd/archetype-worker": "workspace:*",
     "@crowd/common": "workspace:*",
+    "@crowd/common_services": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/opensearch": "workspace:*",
     "@crowd/types": "workspace:*",
