--- a/services/apps/profiles_worker/package.json
+++ b/services/apps/profiles_worker/package.json
@@ -15,11 +15,13 @@
     "@crowd/archetype-standard": "workspace:*",
     "@crowd/archetype-worker": "workspace:*",
     "@crowd/common": "workspace:*",
+    "@crowd/common_services": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/opensearch": "workspace:*",
     "@crowd/types": "workspace:*",
     "@temporalio/client": "~1.11.8",
     "@temporalio/workflow": "~1.11.8",
+    "axios": "^1.6.8",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
   },
