--- a/services/libs/database/package.json
+++ b/services/libs/database/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@crowd/common": "workspace:*",
     "@crowd/logging": "workspace:*",
+    "axios": "^1.11.0",
     "pg-promise": "^11.4.3"
   }
 }
