chore: update security assessment schemas

--- a/scripts/services/docker/Dockerfile.security_best_practices_worker
+++ b/scripts/services/docker/Dockerfile.security_best_practices_worker
@@ -11,7 +11,10 @@ RUN tar -xzf privateer_${PLATFORM}.tar.gz
 FROM golang:1.24.4-alpine3.21 AS plugin
 RUN apk add --no-cache make git
 WORKDIR /plugin
-RUN git clone https://github.com/revanite-io/pvtr-github-repo.git
+ARG PVTR_COMMIT=88d79df63e6140c593cf15366ed63992e1fbed63
+# To run the latest version of the plugin, we need to use the latest commit of the pvtr-github-repo repository.
+# Currently using the version https://github.com/revanite-io/pvtr-github-repo/commit/88d79df63e6140c593cf15366ed63992e1fbed63
+RUN git clone https://github.com/revanite-io/pvtr-github-repo.git && cd pvtr-github-repo && git checkout ${PVTR_COMMIT}
 RUN cd pvtr-github-repo && make binary && cp github-repo ../github-repo
 
 FROM node:20-alpine as builder
