--- a/scripts/scaffold.yaml
+++ b/scripts/scaffold.yaml
@@ -139,7 +139,7 @@ services:
       - crowd-bridge
 
   kafka:
-    image: bitnami/kafka:3.8.0-debian-12-r6
+    image: bitnami/kafka:3.8.1
     restart: unless-stopped
     environment:
       - KAFKA_CFG_NODE_ID=0
