--- a/services/apps/profiles_worker/package.json
+++ b/services/apps/profiles_worker/package.json
@@ -23,7 +23,8 @@
     "@temporalio/workflow": "~1.11.8",
     "axios": "^1.6.8",
     "tsx": "^4.7.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
