--- a/services/apps/integration_run_worker/package.json
+++ b/services/apps/integration_run_worker/package.json
@@ -17,7 +17,8 @@
     "script:auto-heal": "SERVICE=script tsx src/bin/auto-heal-github-integration.ts",
     "debug:consumer": "SERVICE=debug-consumer tsx src/bin/debug-consumer.ts",
     "debug:consumer:advanced": "SERVICE=debug-consumer tsx src/bin/advanced-debug-consumer.ts",
-    "test:message-count": "SERVICE=test tsx src/bin/test-message-count.ts"
+    "test:message-count": "SERVICE=test tsx src/bin/test-message-count.ts",
+    "debug:consumer-groups": "SERVICE=debug tsx src/bin/debug-consumer-groups.ts"
   },
   "dependencies": {
     "@crowd/common": "workspace:*",
